forms, register, login

--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -1,6 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
+
     <h2> List of all posts </h2>
     
     <table class="table table-striped">
@@ -8,6 +14,7 @@
             <tr>
                 <td>ID</td>
                 <td>Title</td>
+                <td>Actions</td>
             </tr>
         </thread>
         <tbody>
@@ -16,6 +23,9 @@
                 <td>{{ post.id }}</td>
                 <td>
                     <a href="{{ path('post.show', {id: post.id}) }}">{{ post.title }}</a>    
+                </td>
+                <td>
+                    <a class="text-danger" href="{{ path('post.delete', {id: post.id}) }}">Delete</a>
                 </td>
             </tr>
             {% endfor %}
