--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,11 @@
                 <li class="nav-item">
                   <a class="nav-link" href="{{ path('custom', {name: 'beau carnes'}) }}">Greet beau carnes</a>
                 </li>
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                  <li class="nav-item float-right">
+                    <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                  </li>
+                {% endif %}
               </ul>
             </div>
         </nav>
